--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -1,7 +1,8 @@
-<form action="/sendmessage/" method="post">{% csrf_token %}
-   <ul>
-       {{ contact_form.as_ul }}       
-    </ul>
-   <input type="submit" value="Submit" />
-    
-</form>
+
+		{% for field in form %}
+			{{ field.errors }}
+			{{ field }}
+
+		{% endfor %}
+
+   
