--- a/templates/blog/entry_index.html
+++ b/templates/blog/entry_index.html
@@ -1,8 +1,18 @@
 {% extends "base.html" %}
 
+{% block title %}
+
+	| Blog
+
+{% endblock %}
+
+{% block page_title %}
+<h1 class="page-header">Blog</h1>
+{% endblock %}
 
 
 {% block content %}
+
 
 
 	
