--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,4 +1,6 @@
 
+h1.page-header {font-weight: 400;}
+
 .blog-post 
   {
     margin:2em 0;
@@ -288,7 +290,40 @@ ul.contact li span, ul.footer-contact li span {text-align: center;}
 
 div.contact-wrap {margin: 3em 0 0;}
 
+/*sticky footer*/
+html,
+body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
 
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -10em;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 10em;
+      }
+      #footer {
+        background-color: #1B1B1B;
+        position:relative;
+        padding:2em;
+        
+
+      }
+
+ul.latest {
+  list-style:none;
+}
+
+ul.latest li a {text-decoration: none; color: #666666;}
 
       @media screen and (min-width: 1200px) {
         span.title h4 { font-size:1.5em;
