--- a/templates/blog/posts_archive.html
+++ b/templates/blog/posts_archive.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}
+
+	| Archive
+
+{% endblock %}
+
 {% block page_title %}
 <h1 class="page-header">Archive</h1>
 {% endblock %}
