fixed video size in projects page/videoloader.js

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -98,6 +98,8 @@ ul.thumbnails li {max-width: 480px;}
 
 .thumbnail {padding:0 !important;}
 
+.thumbnail-widescreen {padding:0 !important;}
+
 div.img-wrap {position:relative; max-width: 480px;}
 
 
