--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -55,7 +55,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/portfolio/newscasts/">newscasts</a></li>
                 <li><a href="/portfolio/projects/">projects</a></li>
-                <li><a href="/portfolio/interactives/">interactives</a></li>
+                <!--<li><a href="/portfolio/interactives/">interactives</a></li>-->
               </ul>
             </li>
             <li><a href="/about/resume/"><i class="icon-list"></i> resume</a></li>
