--- a/templates/flatpages/projects.html
+++ b/templates/flatpages/projects.html
@@ -15,7 +15,7 @@
         <div class="span9"><!--start span9 as container for projects video-->
           <ul class="thumbnails">
             <li class="span3">
-                <a href="{{ STATIC_URL }}video/pages/ticket-trouble.html" class="thumbnail stretchy">
+                <a href="{{ STATIC_URL }}video/pages/ticket-trouble.html" class="thumbnail-wide stretchy">
                   <div class="img-wrap">
                     <img class="spacer" alt="icon" src="{{ STATIC_URL }}img/spacer.png">
                     <img class="sprite" src="{{ STATIC_URL }}img/project-sprite.jpg">
@@ -28,7 +28,7 @@
               
             </li>
             <li class="span3">
-                <a href="{{ STATIC_URL }}video/pages/ticket-hotspots.html" class="thumbnail stretchy">
+                <a href="{{ STATIC_URL }}video/pages/ticket-hotspots.html" class="thumbnail-wide stretchy">
                   <div class="img-wrap">
                     <img class="spacer" alt="icon" src="{{ STATIC_URL }}img/spacer.png">
                     <img class="sprite s2" src="{{ STATIC_URL }}img/project-sprite.jpg">
@@ -42,7 +42,7 @@
               
             </li>
             <li class="span3">
-              <a href="{{ STATIC_URL }}video/pages/ticket-scofflaws.html" class="thumbnail stretchy">
+              <a href="{{ STATIC_URL }}video/pages/ticket-scofflaws.html" class="thumbnail-wide stretchy">
                 <div class="img-wrap">
                     <img class="spacer" alt="icon" src="{{ STATIC_URL }}img/spacer.png">
                     <img class="sprite s3" src="{{ STATIC_URL }}img/project-sprite.jpg">
@@ -56,7 +56,7 @@
               
             </li>
             <li class="span3">
-                <a href="{{ STATIC_URL }}video/pages/fire-response.html" class="thumbnail stretchy">
+                <a href="{{ STATIC_URL }}video/pages/fire-response.html" class="thumbnail-wide stretchy">
                   <div class="img-wrap">
                     <img class="spacer" alt="icon" src="{{ STATIC_URL }}img/spacer.png">
                     <img class="sprite s4" src="{{ STATIC_URL }}img/project-sprite.jpg">
@@ -68,7 +68,7 @@
                 </a>             
             </li>
             <li class="span3">
-                <a href="{{ STATIC_URL }}video/pages/bridge_safety.html" class="thumbnail stretchy">
+                <a href="{{ STATIC_URL }}video/pages/bridge_safety.html" class="thumbnail-wide stretchy">
                   <div class="img-wrap">
                     <img class="spacer" alt="icon" src="{{ STATIC_URL }}img/spacer.png">
                     <img class="sprite s5" src="{{ STATIC_URL }}img/project-sprite.jpg">
