--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -47,8 +47,16 @@
               <ul class="dropdown-menu">
                 <li><a href="/blog/">main</a></li>
                 <li><a href="/blog/archives/">archive</a></li>
-                <li><a href="/blog/categories/">categories</a></li>
-             </ul>
+                {% load blog_tags %}
+                <li class="dropdown-submenu"><a href="/blog/categories/">categories</a></li>
+                  <ul class="dropdown-menu">
+                    {% get_categories %}
+                    {% for category in blog_categories %}
+                      <li><a href="{{ category.get_absolute_url }}">{{category.title}}</a></li>            
+                    {% endfor %}
+                  </ul>
+
+              </ul>
             </li>
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="icon-film"></i> portfolio<b class="caret"></b></a>
@@ -89,11 +97,15 @@
 </div>
 </div>
 
+
+
     <section class="container" id="main" role="main">
-    {% load typogrify_tags %}
+
+      {% load typogrify_tags %}
     {% block page_title %}   
 
   {% endblock page_title %}
+    
 
     {% block content %}
     
@@ -117,9 +129,9 @@
       <div class="row">
         <div class="span4 offset3">
           <h4>Latest Posts</h4>
-          {% load blog_tags %}
+          
           <ul class="latest">
-            {% get_latest_entries %}
+            {% do_latest_entries %}
             {% for entry in latest_entries %}
             <li>
               <a href="{{ entry.get_absolute_url }}">{{ entry.head }}</a>
