--- a/templates/blog/categories.html
+++ b/templates/blog/categories.html
@@ -8,6 +8,13 @@
 
 {% block page_title %}
 <h1 class="page-header">Categories</h1>
+
+<ul class="breadcrumb">
+	<li><a href="/blog/">main</a><span class="divider">/</span></li>
+	<li><a href="archives/">archive</a><span class="divider">/</span></li>
+	<li class="active">categories</li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
