--- a/templates/blog/entry_index.html
+++ b/templates/blog/entry_index.html
@@ -14,6 +14,12 @@
 <h1 class="page-header">Blog</h1>
 {% endif %}
 
+<ul class="breadcrumb">
+	<li class="active">blog<span class="divider">/</span></li>
+	<li><a href="archives/">archive</a><span class="divider">/</span></li>
+	<li><a href="categories/">categories</a></li>
+</ul>
+
 {% endblock %}
 
 
