--- a/templates/blog/posts_archive.html
+++ b/templates/blog/posts_archive.html
@@ -8,6 +8,13 @@
 
 {% block page_title %}
 <h1 class="page-header">Archive</h1>
+
+<ul class="breadcrumb">
+	<li><a href="/blog/">main</a><span class="divider">/</span></li>
+	<li class="active">archive<span class="divider">/</span></li>
+	<li><a href="categories/">categories</a></li>
+</ul>
+
 {% endblock %}
 
 {% block content %}
