--- a/blog/static/css/bootstrap.css
+++ b/blog/static/css/bootstrap.css
@@ -160,7 +160,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Lato", sans-serif; 
+  font-family: "Open-Sans", sans-serif; 
   /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   font-size: 14px;
   line-height: 20px;
