--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,18 +1,31 @@
 
-h1.page-header {font-weight: 400;}
+/*h1.page-header {font-family: 'Lato', sans-serif;}*/
+
+.breadcrumb 
+  {
+    margin-top:-30px;
+    background-color: transparent;
+    font-size:10px;
+    padding-top: 0px;
+  }
 
 .blog-post 
   {
     margin:2em 0;
   }
 
+  article p 
+    {
+      line-height: 22px;
+    }
+
 .post-heading 
   {
-    font-family:'Rokkitt', serif;
+    font-family:'Lato', sans-serif;
 
   }
   
-  hgroup.post-heading h2 {margin-bottom: 0; font-weight:'700'; font-size: 36px; }
+  hgroup.post-heading h2 {margin-bottom: 0; font-weight:'600';}
 
   .post-heading h2 a {color:#333333; text-decoration: none;}
 
@@ -25,7 +38,7 @@ h1.page-header {font-weight: 400;}
     width:3.5em; height: 2.5em; 
     /*border-radius: 50%; */
     text-align: center;
-    font-weight: 700; 
+    font-weight: 600; 
     padding: 0.5em 0; 
     background:#3A87AD;
     background: rgba(58, 135, 173, 0.6); /*#AD0505;*/
@@ -40,7 +53,7 @@ h1.page-header {font-weight: 400;}
   
   hgroup.post-heading h3 span {display:block; font-size:28px;}
 
- h5 {font-family: 'Rokkitt', serif;}
+ h5 {font-family: 'Lato', sans-serif;}
   
   /*.nav-center {width: 70%; margin: 0 auto;}*/
 
@@ -48,7 +61,7 @@ h1.page-header {font-weight: 400;}
   .align-right {text-align: right;}
   .border-right {border-right:3px solid #333333; padding: 10px 10px 30px 0;}
   .rokkitt {font-family:'Rokkitt', serif; font-weight: 700;}
-  .lato {font-family: 'Lato', sans-serif;}
+  .Lato {font-family: 'Lato', sans-serif;}
   .bold {font-style:'bold';}
   .push-down {padding: 20px 0;}/*
   
@@ -70,23 +83,29 @@ h1.page-header {font-weight: 400;}
   .h {font-size:36px; float:left; display:inline;}
 */
   
-  ul.nav {font-family:'Lato', sans-serif; /*font-size: 1.5em; padding: 1.5em 0 0;*/}
+  ul.nav {font-family:'Open-Sans', sans-serif; /*font-size: 1.5em; padding: 1.5em 0 0;*/}
 
   ul.nav i {vertical-align: middle;}
 
+  /*ul.nav li.dropdown a {float:left;}
+
+  ul.nav li.dropdown a.split-dropdown {margin-left:0; padding-left:0;}
+*/
   #social {/*background-color: #999999;*/ margin-top:-20px;}
   a.social-link {color:#333333; text-decoration: none;}
   a.social-link:hover {text-decoration: none; color:#AD0505;}
 
 
   article.job {margin: 20px 0;}
-  .job h4 {font-weight:400;}
+  .job h4 {font-weight:400; font-family: 'Lato', sans-serif;}
   .job h5, h4 {margin:0;}
   .job h5 {font-family:'Lato', sans-serif; font-weight:300; font-style: italic;font-size: 12px; line-height: 14px; /*width:100%; background-color: #333333; color:#ffffff; padding:2px; margin: 5px 0;*/}
-  .education {margin:20px 0 20px 20px;}
+  .education {margin:20px 0 20px 30px;}
+  .education h3, h4 {font-family: 'Lato', sans-serif;}
   .education h3 {margin:0; font-size: 18px; line-height: 20px; font-weight:400;}
   .education h4 {margin:0; font-size:14px; font-style: italic; font-weight:300;}
-  .section-header {font-weight:400; padding: 10px 20px 40px 0; margin-top: 20px; border-right:1px solid #333333; float:right;}
+  .education p {line-height: 22px;}
+  .section-header {font-family: 'Lato', sans-serif; font-weight:400; padding: 10px 20px 40px 0; margin-top: 20px; border-right:1px solid #333333; float:right;}
 
   .portfolio {margin-top:20px;}
 /*center pagination page number*/
@@ -314,7 +333,7 @@ body {
         height: 10em;
       }
       #footer {
-        background-color: #1B1B1B;
+        /*background-color: #1B1B1B;*/
         position:relative;
         padding:2em;
         
@@ -322,7 +341,7 @@ body {
       }
 
 ul.latest {
-  list-style:none;
+  list-style:disc;
 }
 
 ul.latest li a {text-decoration: none; color: #666666;}
