--- a/templates/blog/base_backup.html
+++ b/templates/blog/base_backup.html
@@ -19,8 +19,7 @@
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
   {#{% endcompress %}#}
 
-  <link href='http://fonts.googleapis.com/css?family=Lato|Lato:300i|Lato:700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Rokkitt:700|Lato|Lato:300i|Lato:700' rel='stylesheet' type='text/css'>
 
     
   
@@ -44,31 +43,29 @@
        
        
         <div class="nav-collapse collapse">
-
-
           <ul class="nav pull-left">
+            <li class="dropdown">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="icon-edit"></i> blog <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/blog/">main</a></li>
+                <li><a href="/blog/archives/">archive</a></li>
+                <li><a href="/blog/categories/">categories</a></li>
 
-
-
-          
-            <li>
-              <a href="/blog/">
-              <i class="icon-edit"></i>
-                blog
-              </a>
+              </ul>
             </li>
-            <li>
-              <a href="/portfolio/video/">
-              <i class="icon-film"></i>
-              portfolio
-              </a>
+            <li class="dropdown">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="icon-film"></i> portfolio<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/portfolio/newscasts/">newscasts</a></li>
+                <li><a href="/portfolio/projects/">projects</a></li>
+                <!--<li><a href="/portfolio/interactives/">interactives</a></li>-->
+              </ul>
             </li>
-            <li>
-              <a href="/about/resume/"><i class="icon-list"></i> resume</a></li>
+            <li><a href="/about/resume/"><i class="icon-list"></i> resume</a></li>
             <li><a href="/about/contact/"><i class="icon-envelope-alt"></i> contact</a></li>
             
-           </ul>
-
+          </ul>
+          
         </div>
       </div>
      
@@ -88,7 +85,7 @@
       <a href="http://www.facebook.com/aidian.holder" class="social-link"><i class="icon-facebook-sign icon-2x"></i></a>
       <a href="http://www.twiter.com/aidianz" class="social-link"><i class="icon-twitter-sign icon-2x"></i></a>
       <a href="http://www.github.com/aidianholder" class="social-link"><i class="icon-github-sign icon-2x"></i></a>
-      <a href="/blog/feed/" class="social-link"><i class="icon-rss icon-2x"></i></a>
+      <a href="../feed/" class="social-link"><i class="icon-rss icon-2x"></i></a>
       
     </div>
   </div>
@@ -114,11 +111,7 @@
     
     {% endblock pagination %}
 
-    <hr/>
-
     </section>
-
-
 
 
     <div id='push'></div>
@@ -128,16 +121,10 @@
 
     <div class="container">
       <div class="row">
-
-
-
-        <div class="span9 offset3">
+        <div class="span4 offset3">
             {% load quotes_tags %}
             {% get_quote %}
-            <blockquote class="pull-right">
             <p>{{ active_quote.quote }}</p>
-            <small>{{active_quote.author}}</small>
-            </blockquote>
 
 
         </div>
