--- a/templates/blog/contact.html
+++ b/templates/blog/contact.html
@@ -3,12 +3,12 @@
 
 {% block content %}
 
-
+<h1 class="page-header">Contact</h1>
       
         
   <div class="row">
-    <div class="span10 offset2 well contact-wrap">
-      <h1 class="page-heading">Contact</h1>
+    <div class="span10 offset2 ">
+      <!--<h1 class="page-heading">Contact</h1>-->
       <div class="span3">
         <ul class="contact">
           <li><i class="icon-phone icon-big"></i><span >916.504.8820</span></li>
