fixed contact_success template and view

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,5 +1,5 @@
 
-/*h1.page-header {font-family: 'Lato', sans-serif;}*/
+
 
 .breadcrumb 
   {
@@ -8,6 +8,12 @@
     font-size:10px;
     padding-top: 0px;
   }
+
+h1.page-header
+  {
+    font-family:'Lato', sans-serif;
+  }
+
 
 .blog-post 
   {
