--- a/templates/blog/contact_success.html
+++ b/templates/blog/contact_success.html
@@ -1,14 +1,20 @@
-{% extends "base.html" %}
+{% extends "contact.html" %}
+
+{% block title %}
+
+| Contact | Success
+
+{% endblock %}
 
 
 {% block content %}
 
-
+<h1 class="page-header">Contact</h1>
       
         
   <div class="row">
-    <div class="span10 offset2 well contact-wrap">
-      <h1 class="page-heading">Contact</h1>
+    <div class="span10 offset2 ">
+      <!--<h1 class="page-heading">Contact</h1>-->
       <div class="span3">
         <ul class="contact">
           <li><i class="icon-phone icon-big"></i><span >916.504.8820</span></li>
@@ -20,7 +26,7 @@
       </div>
       <div class="span6">
         <h2>Thanks.  <small>Your message has been sent.</small></h2>
-        <form class="contact" action="/blog/about/contact/" method="post">
+      <form class="contact" action="" method="post">
           {% csrf_token %}
 
           {% for field in form %}
@@ -42,4 +48,7 @@
       
 {% endblock %}
     
-    
+     
+
+      
+      
