changed layout, added multiple settings and server config files to project

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 
 {% block title %}
   
-  | Error - 404
+  | Error - 500
 
 {% endblock %}
 
@@ -20,6 +20,6 @@
 
 {% block content %}
 
-  <h2>Whoops.  I can't find that page.  Sorry 'bout that</h2>
+  <h2>Whoops.  There's been a server error.  Sorry 'bout that</h2>
 
 {% endblock %}
