--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
  {% load compress %}
   {% compress css %}
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css"> 
+  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.min.css"> 
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font/FontAwesome/css/font-awesome.min.css">
   <!--[if IE 7]>
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font/FontAwesome/css/font-awesome-ie7.min.css">
@@ -86,7 +86,7 @@
     <div class="span3 offset9">
 
       <a href="http://www.facebook.com/aidian.holder" class="social-link"><i class="icon-facebook-sign icon-2x"></i></a>
-      <a href="http://www.twiter.com/aidianz" class="social-link"><i class="icon-twitter-sign icon-2x"></i></a>
+      <a href="http://www.twitter.com/aidianz" class="social-link"><i class="icon-twitter-sign icon-2x"></i></a>
       <a href="http://www.github.com/aidianholder" class="social-link"><i class="icon-github-sign icon-2x"></i></a>
       <a href="/blog/feed/" class="social-link"><i class="icon-rss icon-2x"></i></a>
       
@@ -150,13 +150,12 @@
 
   </footer>
 
+ <!--<script src="{{ STATIC_URL }}js/libs/jquery/jquery-1.9.0.min.js"></script>-->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery/jquery-1.9.0.min.js"><\/script>')</script>
 {% load compress %}
 {% compress js %}
-  <script src="{{ STATIC_URL }}js/libs/jquery/jquery-1.9.0.min.js"></script>
-  <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery/jquery-1.9.0.min.js"><\/script>')</script>-->
-
-
+ 
   <script type="text/javascript" src="{{ STATIC_URL }}js/libs/bootstrap/bootstrap.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/libs/colorbox/jquery.colorbox-min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/videoloader.js"></script>
